# insight-scrapers

./: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml  scrape.py
scrapers/: asktheeu.py  nl_foia_covid.py
