[tool.poetry]
name = "asktheeu"
version = "0.1.0"
description = ""
authors = ["Johan Schuijt <johan.schuijt@ftm.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
insight-client = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
