[tool.poetry]
name = "insight_scrapers"
version = "0.1.0"
description = ""
authors = ["Johan Schuijt <johan.schuijt@ftm.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
insightclient = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
